--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "blob-util": "^1.3.0",
     "body-parser": "~1.18.2",
+    "cloudinary": "^1.9.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
