--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
+    "youtube-search": "^1.0.10",
     "ytdl-core": "^0.18.7"
   }
 }
