--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "fluent-ffmpeg": "^2.1.2",
+    "moment": "^2.20.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "^0.9.8",
     "pug": "2.0.0-beta11",
