--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.20.1",
     "morgan": "~1.9.0",
+    "node-sass": "^4.7.2",
     "node-sass-middleware": "^0.9.8",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5",
